concluídas as tarefas 1 e 2 da estratégias de correção, ambientes corretos e sem material para o professor

--- a/aluno.tex
+++ b/aluno.tex
@@ -45,9 +45,9 @@
 % \include{funcoes}
 % \include{funcao-afim}
 % \include{funcao-quadratica}
- \include{estatistica1}
-% \include{estatistica2}
-%\include{probabilidade1}
+%\include{estatistica1}
+%\include{estatistica2}
+\include{probabilidade1}
 % \include{tales}
 % \include{semelhanca}
 %\include{trigonometria}
