atualizacoes dos pacotes livroaberto para consertar erros de compilacao

--- a/aluno.tex
+++ b/aluno.tex
@@ -9,8 +9,8 @@
 \usepackage[brazil]{babel}
 \usepackage{times}
 %\usepackage[Sonny]{fncychap}% This inser
-\usepackage[dontkeepoldnames]{sphinx}%To recognize sphinxadmonition, sphinxincludegraphics, etc.
-
+\usepackage{sphinx}%To recognize sphinxadmonition, sphinxincludegraphics, etc.
+%\usepackage{tabulary}
 \usepackage{geometry}
 \usepackage{sphinxcontribtikz}
 % Include hyperref last.
@@ -45,12 +45,12 @@
 % \include{funcoes}
 % \include{funcao-afim}
 % \include{funcao-quadratica}
-%\include{estatistica1}
-%\include{estatistica2}
-\include{probabilidade1}
+ \include{estatistica1}
+% \include{estatistica2}
+% \include{probabilidade1}
 % \include{tales}
 % \include{semelhanca}
-%\include{trigonometria}
+% \include{trigonometria}
 
 
 % \begin{sphinxthebibliography}{Saarinem-apud-Torres-2004}
