--- a/estatistica2.tex
+++ b/estatistica2.tex
@@ -2079,8 +2079,8 @@ Mediana
 \
 
 
-\begin{sphinxadmonition}{note}{Para refletir}
-a
+\begin{reflection}
+
 \begin{itemize}
 \item {} 
 O que seria necessário considerar para poder comparar o histograma da categoria de Homens com o das Mulheres? Observe que os limites dos intervalos são distintos, mas estão na mesma escala.
@@ -2089,7 +2089,7 @@ O que seria necessário considerar para poder comparar o histograma da categoria
 Como poderiam ser utilizadas a mediana e os quartis para comparar duas distribuições de dados? Pense em alguma forma de comparar esse dados de forma visual e descreva-a.
 
 \end{itemize}
-\end{sphinxadmonition}
+\end{reflection}
 
 \phantomsection\label{\detokenize{PE104-2:ativ-comparacao-de-diferentes-grupos}}
 
@@ -2718,7 +2718,7 @@ e, na companhia B,
 \end{equation*}
 Verifique que o desvio padrão da companhia B é aproximadamente 4 vezes maior do que o da companhia A.
 
-\begin{sphinxadmonition}{note}{Observação}{Por que o desvio padrão é preferível ao desvio médio?}
+\begin{observation}{Por que o desvio padrão é preferível ao desvio médio?}
 
 Você deve estar se perguntando por que se utiliza o desvio padrão na Estatística em detrimento do desvio médio, cujo cálculo é bem mais simples. A resposta é um tanto complexa para o nível em que estamos, mas ela está associada à necessidade na Estatística de se minimizar estruturas de maneira simples. O desvio médio faz uso da função modular \(f(x)=|x|\), que não possui boas propriedades matemáticas para a minimização, por possuir na sua forma uma mudança abrupta em torno de \(x=0\),  enquanto que a variância faz uso da função quadrática \(f(x)=x^2\), representando parábolas de vértice suave e cujas propriedades analíticas são bem conhecidas. Veja a figura a seguir.
 
@@ -2737,7 +2737,7 @@ Muitos problemas de estimação de posição de astros na Física são resolvido
 
 \noindent\sphinxincludegraphics[width=100bp]{{gauss}.png}
 \caption{Carl Friedrich Gauss}\label{\detokenize{PE104-4:id1}}\label{\detokenize{PE104-4:id7}}\end{figure}
-\end{sphinxadmonition}
+\end{observation}
 
 \sphinxstylestrong{Variância populacional e amostral, desvio padrão populacional e amostral}
 
