--- a/livroabertoheadings.sty
+++ b/livroabertoheadings.sty
@@ -386,7 +386,7 @@ underlay boxed title={
 }
 
 %% Exercise section
-\renewcommand{\exercise}{
+\newcommand{\exercise}{
 \vspace{8 mm}
 
 	\noindent \begin{tikzpicture}[remember picture]
