--- a/livroabertopage.sty
+++ b/livroabertopage.sty
@@ -30,7 +30,7 @@
 \RequirePackage{booktabs}
 \RequirePackage{url}
 \RequirePackage{graphicx}
-\RequirePackage[usenames,dvipsnames]{color}
+%\RequirePackage[usenames,dvipsnames]{color}
 \RequirePackage{forloop}
 \RequirePackage{lipsum}
 \RequirePackage{microtype}
