comentei o pacote babel no pacote livroabertopage, ele ja é chamado no preambulo principal

--- a/livroabertopage.sty
+++ b/livroabertopage.sty
@@ -41,7 +41,7 @@
 \RequirePackage{xcolor}
 \RequirePackage{multicol}
 
-\RequirePackage[brazilian]{babel}
+%\RequirePackage[brazilian]{babel}
 \RequirePackage{blindtext}
 
 \RequirePackage{cleveref}
