cor do titulo igual à cor do número do capítulo, capa do capítulo sem número de página

--- a/estatistica1.tex
+++ b/estatistica1.tex
@@ -1,14 +1,14 @@
 
-\renewcommand\chapterillustration{./abertura-estatistica1}%Photo by Hoach Le Dinh on Unsplash, https://unsplash.com/photos/c8TWWQ5ZnUw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText 
-\renewcommand\chapterwhat{Especificidade do pensamento estatístico a partir de problemas. Conceitos: população e amostra, parâmetro e estimador. Variáveis estatísticas e suas classificações. Organização dos dados em tabelas de frequências. Representações gráficas adequadas para os diferentes tipos de variáveis. Noções básicas de amostragem.}
-\renewcommand\chapterbecause{A Estatística está presente no mundo contemporâneo e chega aos cidadãos em todos os
+\def\chapterillustration{./abertura-estatistica1}%Photo by Hoach Le Dinh on Unsplash, https://unsplash.com/photos/c8TWWQ5ZnUw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText 
+\def\chapterwhat{Especificidade do pensamento estatístico a partir de problemas. Conceitos: população e amostra, parâmetro e estimador. Variáveis estatísticas e suas classificações. Organização dos dados em tabelas de frequências. Representações gráficas adequadas para os diferentes tipos de variáveis. Noções básicas de amostragem.}
+\def\chapterbecause{A Estatística está presente no mundo contemporâneo e chega aos cidadãos em todos os
 meios de comunicação. Diariamente somos confrontados com informações estatísticas
 sobre temas como Economia, Educação, Esportes, Saúde, Meio-Ambiente, entre outros.
 Tais informações orientam decisões em nossas vidas pessoais e permitem-nos exercer
 nossas responsabilidades como cidadãos. Um conhecimento básico de Estatística é
 fundamental na formação do cidadão para que este possa, de forma competente, apreciar
 e criticar argumentos baseados em dados.} 
-\chapter{A natureza da Estatística}
+\chapter{A Natureza da Estatística}
 \label{\detokenize{PE103:a-natureza-da-estatistica}}\label{\detokenize{PE103::doc}}
 
 
