correcao de pequenos erros no livroabertoheadings

--- a/estatistica1.tex
+++ b/estatistica1.tex
@@ -8,7 +8,7 @@ Tais informações orientam decisões em nossas vidas pessoais e permitem-nos ex
 nossas responsabilidades como cidadãos. Um conhecimento básico de Estatística é
 fundamental na formação do cidadão para que este possa, de forma competente, apreciar
 e criticar argumentos baseados em dados.} 
-\chapter{A Natureza da Estatística}
+\chapter{A Longa Natureza da Estatística}
 \label{\detokenize{PE103:a-natureza-da-estatistica}}\label{\detokenize{PE103::doc}}
 
 
