--- a/aluno.tex
+++ b/aluno.tex
@@ -16,8 +16,8 @@
 \usepackage{hyperref}
 % Fix anchor placement for figures with captions.
 \usepackage{hypcap}% it must be loaded after hyperref.
-
-
+\usepackage{makeidx} %para criar indice remissivo.
+\makeindex
 \usepackage{amsmath,amssymb,amsfonts,amsthm}
 \usepackage{tikzmacros}
 \usepackage{livroabertopage}
