--- a/estatistica1.tex
+++ b/estatistica1.tex
@@ -171,160 +171,161 @@ Segundo o dicionário Aurélio, dispersão significa (1) ato ou efeito de disper
 Deseja-se comparar três medicamentos, X, Y e Z, no tratamento da dor de cabeça. Para isso 60 pacientes com perfis similares foram separados aleatoriamente em três grupos de 20 cada. Para cada grupo,  será ministrado um dos medicamentos e observado o tempo de cura da dor de cabeça (em minutos). No quadro a seguir estão dispostos os dados obtidos.
 \phantomsection\label{\detokenize{PE103-0:tabela-medicamentos}}
 
-\begin{savenotes}\sphinxattablestart
-\centering
-\begin{tabulary}{\linewidth}[t]{|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|}
-\hline
-\sphinxstylethead{\sphinxstyletheadfamily 
-medicamento
-\unskip}\relax &\sphinxstartmulticolumn{20}%
-\begin{varwidth}[t]{\sphinxcolwidth{20}{22}}
-\sphinxstylethead{\sphinxstyletheadfamily tempo em minutos
-\unskip}\relax \par
-\vskip-\baselineskip\vbox{\hbox{\strut}}\end{varwidth}%
-\sphinxstopmulticolumn
-&\sphinxstylethead{\sphinxstyletheadfamily 
-soma
-\unskip}\relax \\
-\hline
-X
-&
-7
-&
-8
-&
-8
-&
-9
-&
-9
-&
-9
-&
-9
-&
-10
-&
-10
-&
-10
-&
-10
-&
-10
-&
-10
-&
-11
-&
-11
-&
-11
-&
-11
-&
-12
-&
-12
-&
-13
-&
-200
-\\
-\hline
-Y
-&
-7
-&
-8
-&
-9
-&
-9
-&
-10
-&
-10
-&
-11
-&
-11
-&
-11
-&
-12
-&
-12
-&
-12
-&
-13
-&
-13
-&
-14
-&
-14
-&
-15
-&
-15
-&
-16
-&
-18
-&
-240
-\\
-\hline
-Z
-&
-11
-&
-11
-&
-11
-&
-11
-&
-11
-&
-12
-&
-12
-&
-12
-&
-12
-&
-12
-&
-12
-&
-12
-&
-12
-&
-12
-&
-12
-&
-13
-&
-13
-&
-13
-&
-13
-&
-13
-&
-240
-\\
-\hline
-\end{tabulary}
-\par
-\sphinxattableend\end{savenotes}
+% \begin{savenotes}\sphinxattablestart
+% \centering
+% \begin{tabulary}{\linewidth}[t]{|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|T|}
+% \hline
+% %\sphinxstylethead{\sphinxstyletheadfamily 
+% {medicamento
+% \unskip}\relax &\sphinxstartmulticolumn{20}%
+% \begin{varwidth}[t]{\sphinxcolwidth{20}{22}}
+%   % \sphinxstylethead{\sphinxstyletheadfamily
+%   {tempo em minutos
+% \unskip}\relax \par
+% \vskip-\baselineskip\vbox{\hbox{\strut}}\end{varwidth}%
+% \sphinxstopmulticolumn
+% &%\sphinxstylethead{\sphinxstyletheadfamily{ 
+% soma
+% \unskip}\relax \\
+% \hline
+% X
+% &
+% 7
+% &
+% 8
+% &
+% 8
+% &
+% 9
+% &
+% 9
+% &
+% 9
+% &
+% 9
+% &
+% 10
+% &
+% 10
+% &
+% 10
+% &
+% 10
+% &
+% 10
+% &
+% 10
+% &
+% 11
+% &
+% 11
+% &
+% 11
+% &
+% 11
+% &
+% 12
+% &
+% 12
+% &
+% 13
+% &
+% 200
+% \\
+% \hline
+% Y
+% &
+% 7
+% &
+% 8
+% &
+% 9
+% &
+% 9
+% &
+% 10
+% &
+% 10
+% &
+% 11
+% &
+% 11
+% &
+% 11
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 13
+% &
+% 13
+% &
+% 14
+% &
+% 14
+% &
+% 15
+% &
+% 15
+% &
+% 16
+% &
+% 18
+% &
+% 240
+% \\
+% \hline
+% Z
+% &
+% 11
+% &
+% 11
+% &
+% 11
+% &
+% 11
+% &
+% 11
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 12
+% &
+% 13
+% &
+% 13
+% &
+% 13
+% &
+% 13
+% &
+% 13
+% &
+% 240
+% \\
+% \hline
+% \end{tabulary}
+% \par
+% \sphinxattableend\end{savenotes}
 \begin{enumerate}
 \item {} 
 Organize as informações apresentadas no quadro acima em diagramas de pontos. Utilize uma folha de papel quadriculada, usando a mesma escala.
@@ -627,17 +628,16 @@ As variáveis discretas resultam de uma contagem ou são variáveis cuja quantid
 \begin{description}
 \item[{Variável quantitativa contínua\index{Variável quantitativa contínua|textbf}}] \leavevmode\phantomsection\label{\detokenize{PE103-1:term-variavel-quantitativa-continua}}
 As variáveis quantitativas contínuas em geral resultam de uma medição. Por exemplo, altura, peso, temperatura, etc.
-
 \end{description}
 
-\begin{observation}
 
-Na análise dos infográficos vimos que uma variável quantitativa pode ser tratada como qualitativa, por exemplo, a idade trabalhada em faixas etárias torna-se uma variável qualitativa ordinal. No entanto, se consideramos a idade em anos completos temos uma variável quantitativa. Por outro lado, também podemos transformar uma variável qualitativa em quantitativa. Considere a variável ``prática de atividades físicas'' que tem como respostas ``Sim'' ou ``Não''. Esse tipo de variável com apenas duas respostas é chamado \index{variável binária}variável binária e tem uma representação numérica natural. Podemos atribuir o número 1 para a resposta ``Sim'' e o número 0 para a resposta ``Não''. Essa estratégia permite somar todas as respostas. Observe que a soma representará o número de pessoas na amostra que praticam atividade física e a ``média'' representará a proporção de pessoas na amostra que praticam atividade física.
-\end{observation}
+ \begin{observation}{}
+Na análise dos infográficos vimos que uma variável quantitativa pode ser tratada como qualitativa, por exemplo, a idade trabalhada em faixas etárias torna-se uma variável qualitativa ordinal. No entanto, se consideramos a idade em anos completos temos uma variável quantitativa. Por outro lado, também podemos transformar uma variável qualitativa em quantitativa. Considere a variável ``prática de atividades físicas'' que tem como respostas ``Sim'' ou ``Não''. Esse tipo de variável com apenas duas respostas é chamado \index{variável binária} variável binária e tem uma representação numérica natural. Podemos atribuir o número 1 para a resposta ``Sim'' e o número 0 para a resposta ``Não''. Essa estratégia permite somar todas as respostas. Observe que a soma representará o número de pessoas na amostra que praticam atividade física e a ``média'' representará a proporção de pessoas na amostra que praticam atividade física.
+ \end{observation}
 
 \textbf{Gráficos para Variáveis Qualitativas}
 
-Nas análises dos infográficos, trabalhamos com alguns tipos de gráficos para representar a distribuição de frequências de variáveis qualitativas. No {\hyperref[\detokenize{PE103-0:fig-infografico-pnad-3}]{\sphinxcrossref{\DUrole{std,std-ref}{infográfico 3}}}}, tem-se um \index{gráfico de barras}gráfico de barras. Nesse gráfico, cada barra, de mesma largura, representa uma resposta e seu comprimento corresponde à \index{frequência}frequência na qual a resposta ocorre. Observe também que, nesse gráfico, se estivermos trabalhando com as porcentagens de cada resposta, a soma das porcentagens deve ser 100\%.
+Nas análises dos infográficos, trabalhamos com alguns tipos de gráficos para representar a distribuição de frequências de variáveis qualitativas. No {\hyperref[\detokenize{PE103-0:fig-infografico-pnad-3}]{\sphinxcrossref{\DUrole{std,std-ref}{infográfico 3}}}}, tem-se um \index{gráfico de barras} gráfico de barras. Nesse gráfico, cada barra, de mesma largura, representa uma resposta e seu comprimento corresponde à \index{frequência} frequência na qual a resposta ocorre. Observe também que, nesse gráfico, se estivermos trabalhando com as porcentagens de cada resposta, a soma das porcentagens deve ser 100\%.
 
 Em geral, se a variável for ordinal dispomos as respostas em ordem crescente. Se a variável é nominal, podemos dispor as respostas em ordem decrescente de frequência.
 
